--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,35 @@
-.App {
+.game-container {
+  background: #f2f2f2;
+  border: 1px solid #cdcdcd;
+  max-width: 1200px;
+  height: 800px;
+  margin: 0px auto;
+  position: relative;
+  overflow: hidden; }
+
+.main-menu {
+  background: white;
+  height: 100%; }
+
+.guesses {
+  float: right;
+  width: 30%; }
+  .guesses h1 {
+    color: blue;
+    font-size: 30px; }
+
+.screen-word {
+  font-size: 24px;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+  width: 60%;
+  float: left;
+  position: relative; }
+  .screen-word:before {
+    content: url("/images/theater.jpg");
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0; }
