--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
   background: white;
   height: 100%; }
 
+.header-stats span {
+  display: inline-block; }
+
 .guesses {
   float: right;
   width: 30%; }
@@ -23,13 +26,19 @@
   text-align: center;
   width: 60%;
   float: left;
-  position: relative; }
-  .screen-word:before {
-    content: url("/images/theater.jpg");
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0; }
+  position: relative;
+  background-image: url(/static/media/theater.7feb7b1e.jpg);
+  display: block;
+  background-size: cover;
+  width: 65%;
+  min-height: 475px;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.letters {
+  position: absolute;
+  left: 37%;
+  top: 100px; }
+
+.guess-letters {
+  font-size: 30px; }
