--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -13,6 +13,11 @@
     height: 100%;
 }
 
+.header-stats{
+    span{
+        display: inline-block;
+    }
+}
 
 .guesses {
     float: right;
@@ -30,14 +35,21 @@
     width: 60%;
     float: left;
     position: relative;
-    &:before {
-        content: url('/images/theater.jpg');
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-    }
+    background-image: url(/static/media/theater.7feb7b1e.jpg);
+    display: block;
+    background-size: cover;
+    width: 65%;
+    min-height: 475px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.letters{
+    position: absolute;
+    left: 37%;
+    top: 100px;
+}
+
+.guess-letters{
+    font-size: 30px;
 }
