Added start new game feature. Also added new categories food. Allow for spaes and uppercase words

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,8 @@
   background-position: center; }
 
 .letters {
-  position: absolute;
-  left: 37%;
-  top: 100px; }
+  position: relative;
+  top: 150px; }
 
 .guess-letters {
   font-size: 30px; }
