--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -44,9 +44,8 @@
 }
 
 .letters{
-    position: absolute;
-    left: 37%;
-    top: 100px;
+    position: relative;
+    top: 150px;
 }
 
 .guess-letters{
