--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,41 @@
   display: block;
   background-size: cover;
   width: 65%;
-  min-height: 475px;
+  min-height: 720px;
   background-repeat: no-repeat;
   background-position: center; }
+  .screen-word .foods {
+    background-image: url("./images/food.png");
+    height: 42px;
+    background-repeat: repeat;
+    background-size: auto 100%;
+    -webkit-animation: sliderleft 70s linear infinite;
+    -moz-animation: sliderleft 70s linear infinite; }
+  .screen-word .countries {
+    background-image: url("./images/earthleaf.gif");
+    background-size: contain;
+    height: 118px;
+    -webkit-animation: sliderleft 150s linear infinite;
+    -moz-animation: sliderleft 150s linear infinite; }
+  .screen-word .movies {
+    background-image: url("./images/filmstrip.png");
+    height: 90px;
+    background-repeat: repeat;
+    background-size: auto 100%;
+    -webkit-animation: sliderleft 60s linear infinite;
+    -moz-animation: sliderleft 60s linear infinite; }
+
+@-webkit-keyframes sliderleft {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: -10000px 0; } }
+
+@-moz-keyframes sliderleft {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: -10000px 0; } }
 
 .letters {
   position: relative;
@@ -44,3 +76,6 @@
 .game-over {
   width: 100%;
   height: 100%; }
+
+.letter-count {
+  float: right; }
