Added Backgrounds/sliding BGs. Changed styling orientation of text

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background: #f2f2f2;
   border: 1px solid #cdcdcd;
   max-width: 1200px;
-  height: 800px;
+  height: 860px;
   margin: 0px auto;
   position: relative;
   overflow: hidden; }
@@ -11,15 +11,21 @@
   background: white;
   height: 100%; }
 
-.header-stats span {
-  display: inline-block; }
+.header-stats {
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 20px; }
+  .header-stats span {
+    display: inline-block; }
 
 .guesses {
   float: right;
-  width: 30%; }
+  width: 30%;
+  text-align: center; }
   .guesses h1 {
-    color: blue;
-    font-size: 30px; }
+    color: black;
+    font-size: 30px;
+    font-style: italic; }
 
 .screen-word {
   font-size: 24px;
@@ -30,9 +36,17 @@
   display: block;
   background-size: cover;
   width: 65%;
-  min-height: 720px;
+  min-height: 640px;
+  border: 4px solid #cdcdcd;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+  margin-left: 40px; }
+  .screen-word.countries {
+    background: #21315a;
+    color: white; }
+  .screen-word.movies {
+    background: black;
+    color: white; }
   .screen-word .foods {
     background-image: url("./images/food.png");
     height: 42px;
