--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Quantico");
+.body {
+  font-family: 'Quantico', sans-serif; }
+
 .game-container {
   background: #f2f2f2;
   border: 1px solid #cdcdcd;
