--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quantico');
+
 $yel: #EEC25E;
 
 $sal: #F79D84;
@@ -8,6 +10,9 @@ $bl: #39A0ED;
 
 $r: #EE6352;
 
+.body{
+    font-family: 'Quantico', sans-serif;
+}
 
 .game-container {
     background: #f2f2f2;
@@ -17,7 +22,7 @@ $r: #EE6352;
     margin: 0px auto;
     position: relative;
     overflow: hidden;
-    
+
 }
 
 .main-menu {
