--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Quantico");
-.body {
-  font-family: 'Quantico', sans-serif; }
+body {
+  font-family: 'Quantico'; }
 
 .game-container {
   background: #f2f2f2;
-  border: 1px solid #cdcdcd;
+  border: 4px solid #cdcdcd;
   max-width: 1200px;
   height: 860px;
   margin: 0px auto;
@@ -21,15 +21,21 @@
   padding: 20px; }
   .header-stats span {
     display: inline-block; }
+  .header-stats .heart {
+    background: url("./images/heart.png");
+    background-size: contain;
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    margin: 0px 5px; }
 
 .guesses {
   float: right;
   width: 30%;
   text-align: center; }
   .guesses h1 {
-    color: black;
-    font-size: 30px;
-    font-style: italic; }
+    color: white;
+    font-size: 30px; }
 
 .screen-word {
   font-size: 24px;
@@ -39,18 +45,21 @@
   position: relative;
   display: block;
   background-size: cover;
-  width: 65%;
-  min-height: 640px;
-  border: 4px solid #cdcdcd;
+  width: 100%;
+  min-height: 100vh;
+  border: none;
   background-repeat: no-repeat;
-  background-position: center;
-  margin-left: 40px; }
+  background-position: center; }
   .screen-word.countries {
     background: #21315a;
     color: white; }
   .screen-word.movies {
     background: black;
     color: white; }
+  .screen-word.foods {
+    color: #F79D84; }
+    .screen-word.foods .guesses h1 {
+      color: #F79D84; }
   .screen-word .foods {
     background-image: url("./images/food.png");
     height: 42px;
@@ -71,6 +80,8 @@
     background-size: auto 100%;
     -webkit-animation: sliderleft 60s linear infinite;
     -moz-animation: sliderleft 60s linear infinite; }
+  .screen-word h3 {
+    padding: 40px 0px; }
 
 @-webkit-keyframes sliderleft {
   from {
@@ -94,6 +105,9 @@
 .game-over {
   width: 100%;
   height: 100%; }
+
+.attempt-count {
+  float: left; }
 
 .letter-count {
   float: right; }
