--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -10,19 +10,18 @@ $bl: #39A0ED;
 
 $r: #EE6352;
 
-.body{
-    font-family: 'Quantico', sans-serif;
+body {
+    font-family: 'Quantico';
 }
 
 .game-container {
     background: #f2f2f2;
-    border: 1px solid #cdcdcd;
+    border: 4px solid #cdcdcd;
     max-width: 1200px;
     height: 860px;
     margin: 0px auto;
     position: relative;
     overflow: hidden;
-
 }
 
 .main-menu {
@@ -37,6 +36,15 @@ $r: #EE6352;
     span {
         display: inline-block;
     }
+    .heart {
+        background: url('./images/heart.png');
+        background-size: contain;
+        display: inline-block;
+        height: 40px;
+        width: 40px;
+        margin: 0px 5px;
+
+    }
 }
 
 .guesses {
@@ -44,9 +52,8 @@ $r: #EE6352;
     width: 30%;
     text-align: center;
     h1 {
-        color: black;
+        color: white;
         font-size: 30px;
-        font-style: italic;
     }
 }
 
@@ -59,19 +66,26 @@ $r: #EE6352;
     position: relative;
     display: block;
     background-size: cover;
-    width: 65%;
-    min-height: 640px;
-    border: 4px solid #cdcdcd;
+    width: 100%;
+    min-height: 100vh;
+    border: none;
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 40px;
     &.countries {
         background: #21315a;
         color: white;
     }
-    &.movies{
+    &.movies {
         background: black;
         color: white;
+    }
+    &.foods {
+        color: #F79D84;
+        .guesses {
+            h1 {
+                color: #F79D84;
+            }
+        }
     }
     .foods {
         background-image: url('./images/food.png');
@@ -95,6 +109,9 @@ $r: #EE6352;
         background-size: auto 100%;
         -webkit-animation: sliderleft 60s linear infinite;
         -moz-animation: sliderleft 60s linear infinite;
+    }
+    h3 {
+        padding: 40px 0px;
     }
 }
 
@@ -133,7 +150,9 @@ $r: #EE6352;
 }
 
 
-.attempt-count {}
+.attempt-count {
+    float: left;
+}
 
 .letter-count {
     float: right;
