--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -29,7 +29,12 @@ body {
     height: 100%;
 }
 
+.header{
+    margin: 15px 0px 0px 0px;
+}
+
 .header-stats {
+    position: relative;
     margin-left: 15px;
     margin-right: 15px;
     padding: 20px;
@@ -37,7 +42,7 @@ body {
         display: inline-block;
     }
     .heart {
-        background: url('./images/heart.png');
+        background: url('./images/heart2.png');
         background-size: contain;
         display: inline-block;
         height: 40px;
@@ -110,8 +115,9 @@ body {
         -webkit-animation: sliderleft 60s linear infinite;
         -moz-animation: sliderleft 60s linear infinite;
     }
-    h3 {
-        padding: 40px 0px;
+    .theme-text {
+        display: block;
+        text-align: center;
     }
 }
 
@@ -151,7 +157,8 @@ body {
 
 
 .attempt-count {
-    float: left;
+   text-align: left;
+   width: 75%;
 }
 
 .letter-count {
