--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,63 @@ body {
 
 .letter-count {
   float: right; }
+
+@keyframes blinker {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes blackwhite {
+  0% {
+    background-position: 0% 82%; }
+  50% {
+    background-position: 100% 19%; }
+  100% {
+    background-position: 0% 82%; } }
+
+.game-over {
+  text-align: center;
+  cursor: pointer; }
+  .game-over h1 {
+    margin-top: 0px;
+    font-size: 60px;
+    font-weight: bold; }
+  .game-over .won {
+    background: white;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    animation: blackwhite 0s infinite linear 1s; }
+    .game-over .won .reward {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 25%;
+      position: relative;
+      font-size: 45px;
+      font-style: inherit; }
+    .game-over .won .heart {
+      background: url("./images/heart2.png");
+      background-size: contain;
+      display: block;
+      height: 65px;
+      width: 65px;
+      margin: 0px 50px;
+      animation: blinker 1s infinite linear; }
+  .game-over .lost {
+    background: grey;
+    width: 100%;
+    height: 100%; }
+    .game-over .lost:hover h2 {
+      color: white; }
+  .game-over h2 {
+    position: absolute;
+    bottom: 50px;
+    width: auto;
+    left: 0;
+    right: 0; }
