--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -29,7 +29,7 @@ body {
     height: 100%;
 }
 
-.header{
+.header {
     margin: 15px 0px 0px 0px;
 }
 
@@ -48,7 +48,6 @@ body {
         height: 40px;
         width: 40px;
         margin: 0px 5px;
-
     }
 }
 
@@ -157,10 +156,90 @@ body {
 
 
 .attempt-count {
-   text-align: left;
-   width: 75%;
+    text-align: left;
+    width: 75%;
 }
 
 .letter-count {
     float: right;
+}
+
+@keyframes blinker {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes blackwhite {
+    0% {
+        background-position: 0% 82%;
+    }
+    50% {
+        background-position: 100% 19%;
+    }
+    100% {
+        background-position: 0% 82%;
+    }
+}
+
+.game-over {
+    text-align: center;
+    cursor: pointer;
+
+    h1 {
+        margin-top: 0px;
+        font-size: 60px;
+        font-weight: bold;
+    }
+    .won {
+        .reward {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 25%;
+            position: relative;
+            font-size: 45px;
+            font-style: inherit;
+        }
+        background: white;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        position: absolute;
+        animation: blackwhite 0s infinite linear 1s;
+        h2 {}
+        .heart {
+            background: url('./images/heart2.png');
+            background-size: contain;
+            display: block;
+            height: 65px;
+            width: 65px;
+            margin: 0px 50px;
+            animation: blinker 1s infinite linear;
+        }
+    }
+    .lost {
+        background: grey;
+        width: 100%;
+        height: 100%;
+        &:hover {
+            h2 {
+                color: white;
+            }
+        }
+    }
+    h2 {
+        position: absolute;
+        bottom: 50px;
+        width: auto;
+        left: 0;
+        right: 0;
+    }
 }
